Fix scrollbar shifting content

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,6 +8,7 @@
 body {
   max-width: 720px;
   margin: 0 auto;
+  overflow-y: overlay;
 }
 
 a {
